# Fenrir

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: CODEX_STANDARDS.md  about.md  adaptive-probe-v0-report.md  architecture.md  data-model.md  design-principles.md  evaluation-conditions.md  frontend-usage.md  gold-slice-eval-report.md  hybrid-mvp-report.md  installation.md  item-bank-generation.md  local-service.md  mvp-freeze-report.md  mvp-freeze.md  outreach_note_daniel_hulme.md  psychometrics-notes.md  question-bank-curation.md  readout-contract.md  report-contract.md  roadmap.md  seed-generation-cleanup-report.md  seed-review-process.md  workspace-safety.md
evals/: runner.py
fenrir/: __init__.py  config.py  local_runtime.py  local_service.py  server.py
schemas/: report.schema.json  response_record.schema.json  run_manifest.schema.json
scripts/: check_fenrir_env.py  check_workspace_scope.py  compare_gold_slice_runs.py  export_seed_review.py  generate_seed_bank.py  install_fenrir.py  run_adaptive_probe_eval.py  run_gold_slice_eval.py  run_hybrid_mvp_eval.py  smoke_run.py  start_fenrir.py  validate_artifacts.py  validate_battery.py  validate_seed_bank.py
tests/: test_adaptive_controller.py  test_adaptive_runtime.py  test_adaptive_templates.py  test_conditions.py  test_fenrir_seed_pipeline.py  test_frontend_smoke.py  test_generation_paths.py  test_gold_slice_eval.py  test_gold_slice_runtime.py  test_hybrid_mvp_eval.py  test_installation.py  test_local_service.py  test_registry.py  test_run_artifacts.py  test_schemas.py  (+6 more)
(+96 files in other folders)
